BACKPORT: anv: Add workaround for sample mask with multisampling

The game Batman: Arkham Knight expects OpenGL behavior
with sample mask and multisampling which is different
from the Vulkan one.
This workaround fix changes key->ignore_sample_mask_out
value that is used for
prog_data->uses_omask definition in brv_fs.cpp(9740)
In that way prog_data->uses_omask also changes it value
and the cloak stops flickering.

Closes: https://gitlab.freedesktop.org/mesa/mesa/-/issues/6078

Signed-off-by: Viktoriia Palianytsia <v.palianytsia@globallogic.com>

Reviewed-by: Lionel Landwerlin <lionel.g.landwerlin@intel.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/16551>

(cherry picked from commit e39a5f2b9f66a5ae692b273512da7960f20aca0e)

BUG=b:235633353
TEST=Run Batman Arkham Knight benchmark and look for visual bugs

Change-Id: I82ce17710cf59b6af3f1d4c4854943e7dc5556ce
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/mesa/+/3744581
Tested-by: Max Lee <endlesspring@google.com>
Reviewed-by: Renato Pereyra <renatopereyra@google.com>
Reviewed-by: Ilja Friedel <ihf@chromium.org>
Commit-Queue: Ilja Friedel <ihf@chromium.org>